Input: fixes invalid icon and vcode image vertical alignment

--- a/src/components/cell/input/index.scss
+++ b/src/components/cell/input/index.scss
@@ -36,6 +36,10 @@
     composes: footer from "../base.scss";
     line-height: 0;
 }
+.footer > * {
+    display: inline-block;
+    vertical-align: middle;
+}
 
 
 .input-container {
